--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 NODE_ENV=development
 SERVER_ENV=local
 PORT=8080
+DEFAULT_LANGUAGE=ru
+ACCEPTED_LANGUAGES=ru|en|de|fr|it
+REDIS_URI=
+# TTL DEFINED IN SECONDS
+CACHE_TTL=
+PAGE_CACHE_TTL=
