--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "vue-fastify-pwa",
+  "name": "vueltimate-boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/index.js",
+  "main": "./dist/server.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "env-cmd run-p dev:*",
-    "build": "run-p build:*",
-    "start": "node ./dist/server.js",
-    "build:browser": "npm run clean:browser && cross-env BABEL_ENV=browser webpack --config webpack/config.browser.js",
-    "build:server": "npm run clean:server && babel src/server --out-dir dist --copy-files",
-    "build:ssr": "npm run clean:ssr && webpack --config webpack/config.ssr.js",
-    "clean:browser": "del-cli dist/public dist/assets dist/ssr/manifest.json",
-    "clean:server": "del-cli dist/* !dist/public",
-    "clean:ssr": "del-cli dist/ssr/bundle.json",
-    "dev:browser": "npm run clean:browser && cross-env BABEL_ENV=browser webpack-dev-server --config webpack/config.browser.js",
-    "dev:server": "npm run clean:server && cross-env BABEL_ENV=node NODE_ENV=development nodemon src/server/server.js",
-    "dev:ssr": "npm run clean:ssr && env-cmd cross-env BABEL_ENV=node webpack -w --config webpack/config.ssr.js",
+    "dev": "npm run clean && env-cmd run-p dev:*",
+    "start:local": "npm run clean && env-cmd cross-env NODE_ENV=production SERVER_ENV=production run-p build:* && env-cmd cross-env NODE_ENV=production PORT=80 node --inspect ./dist/server.js",
+    "build": "npm run clean && env-cmd run-p build:*",
+    "clean": "del-cli dist/**/*",
     "lint": "run-p lint:*",
-    "lint:scripts": "eslint ./ --ext .js,.vue,.html --fix",
-    "lint:styles": "stylelint **/*.css **/*.scss **/*.html **/*.njk !./dist/** --fix",
+    "start": "node ./dist/server.js",
+    "build:browser": "webpack --config webpack/config.browser.js",
+    "build:server": "cross-env BABEL_ENV=node babel src/server --out-dir dist --copy-files",
+    "build:ssr": "webpack --config webpack/config.ssr.js",
+    "dev:browser": "webpack-dev-server --config webpack/config.browser.js",
+    "dev:server": "cross-env BABEL_ENV=node nodemon src/server/server.js",
+    "dev:ssr": "webpack --config webpack/config.ssr.js --watch",
+    "lint:scripts": "eslint ./ --ext .js,.vue,.html",
+    "lint:styles": "stylelint **/*.css **/*.scss **/*.html **/*.njk !./dist/**",
     "heroku-postbuild": "npm run build",
     "prepare": "cp -n .env.example .env"
   },
@@ -40,6 +39,7 @@
     "popper.js": "1.15.0",
     "purgecss": "1.4.0",
     "redis": "2.8.0",
+    "serve-favicon": "2.5.0",
     "shrink-ray-current": "4.0.0",
     "vue": "2.6.10",
     "vue-observe-visibility": "0.4.4",
@@ -50,12 +50,12 @@
     "vuex-router-sync": "5.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/node": "7.5.5",
+    "@babel/cli": "7.6.0",
+    "@babel/core": "7.6.0",
+    "@babel/node": "7.6.1",
     "@babel/plugin-proposal-class-properties": "7.5.5",
-    "@babel/plugin-proposal-decorators": "7.4.4",
-    "@babel/plugin-proposal-do-expressions": "7.5.0",
+    "@babel/plugin-proposal-decorators": "7.6.0",
+    "@babel/plugin-proposal-do-expressions": "7.6.0",
     "@babel/plugin-proposal-export-default-from": "7.5.2",
     "@babel/plugin-proposal-export-namespace-from": "7.5.2",
     "@babel/plugin-proposal-function-bind": "7.2.0",
@@ -64,13 +64,13 @@
     "@babel/plugin-proposal-logical-assignment-operators": "7.2.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.4.4",
     "@babel/plugin-proposal-numeric-separator": "7.2.0",
-    "@babel/plugin-proposal-optional-chaining": "7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "7.6.0",
     "@babel/plugin-proposal-pipeline-operator": "7.5.0",
     "@babel/plugin-proposal-throw-expressions": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.5.5",
-    "@babel/preset-env": "7.5.5",
+    "@babel/plugin-transform-runtime": "7.6.0",
+    "@babel/preset-env": "7.6.0",
     "autoprefixer": "9.6.1",
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
@@ -79,11 +79,13 @@
     "babel-plugin-remove-webpack": "1.1.0",
     "browser-sync": "2.26.7",
     "browser-sync-webpack-plugin": "2.2.2",
+    "chokidar": "3.0.2",
     "copy-webpack-plugin": "5.0.4",
     "core-js": "3.2.1",
-    "cross-env": "5.2.0",
+    "cross-env": "5.2.1",
     "css-loader": "3.2.0",
-    "del-cli": "2.0.0",
+    "decache": "4.5.1",
+    "del-cli": "3.0.0",
     "env-cmd": "10.0.1",
     "eslint": "6.3.0",
     "eslint-config-airbnb-base": "14.0.0",
@@ -97,12 +99,12 @@
     "file-loader": "4.2.0",
     "friendly-errors-webpack-plugin": "1.7.0",
     "html-webpack-plugin": "3.2.0",
-    "husky": "3.0.4",
+    "husky": "3.0.5",
     "ignore-loader": "0.1.2",
-    "image-webpack-loader": "5.0.0",
+    "image-webpack-loader": "6.0.0",
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "4.12.0",
-    "nodemon": "1.19.1",
+    "nodemon": "1.19.2",
     "npm-run-all": "4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "postcss-loader": "3.0.0",
@@ -114,13 +116,13 @@
     "stylelint-config-twbs-bootstrap": "0.4.0",
     "stylelint-webpack-plugin": "0.10.5",
     "svg-to-vue-component": "0.3.8",
-    "terser-webpack-plugin": "1.4.1",
+    "terser-webpack-plugin": "2.0.1",
     "url-loader": "2.1.0",
     "vue-eslint-parser": "6.0.4",
     "vue-loader": "15.7.1",
     "vue-template-compiler": "2.6.10",
     "webpack": "4.39.3",
-    "webpack-cli": "3.3.7",
+    "webpack-cli": "3.3.8",
     "webpack-dev-server": "3.8.0",
     "webpack-node-externals": "1.7.2",
     "webpack-notifier": "1.8.0",
@@ -339,11 +341,7 @@
   },
   "nodemonConfig": {
     "exec": "babel-node",
-    "delay": 1000,
-    "watch": [
-      "dist",
-      "src"
-    ],
+    "watch": "src/server",
     "ext": "js,njk,json"
   }
 }
