--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vueltimate-boilerplate",
+  "name": "b12k.com",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/server.js",
