--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "dev:server": "cross-env BABEL_ENV=node nodemon src/server/server.js",
     "dev:ssr": "webpack --config webpack/config.ssr.js --watch",
     "lint:scripts": "eslint ./ --ext .js,.vue,.html",
+    "lint:scripts:fix": "npm run lint:scripts -- --fix",
     "lint:styles": "stylelint **/*.css **/*.scss **/*.html !./dist/**",
+    "lint:styles:fix": "npm run lint:styles -- --fix",
     "heroku-postbuild": "npm run build",
     "prepare": "cp -n .env.example .env"
   },
@@ -37,41 +39,41 @@
     "node-zopfli-es": "1.0.3",
     "nunjucks": "3.2.0",
     "popper.js": "1.16.0",
-    "purgecss": "1.4.0",
+    "purgecss": "1.4.1",
     "redis": "2.8.0",
     "serve-favicon": "2.5.0",
     "shrink-ray-current": "4.1.2",
     "vue": "2.6.10",
-    "vue-observe-visibility": "0.4.5",
+    "vue-observe-visibility": "0.4.6",
     "vue-router": "3.1.3",
     "vue-server-renderer": "^2.6.10",
-    "vuex": "3.1.1",
+    "vuex": "3.1.2",
     "vuex-i18n": "1.13.1",
     "vuex-router-sync": "5.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.6.4",
-    "@babel/core": "7.6.4",
-    "@babel/node": "7.6.3",
-    "@babel/plugin-proposal-class-properties": "7.5.5",
-    "@babel/plugin-proposal-decorators": "7.6.0",
-    "@babel/plugin-proposal-do-expressions": "7.6.0",
-    "@babel/plugin-proposal-export-default-from": "7.5.2",
-    "@babel/plugin-proposal-export-namespace-from": "7.5.2",
-    "@babel/plugin-proposal-function-bind": "7.2.0",
-    "@babel/plugin-proposal-function-sent": "7.5.0",
-    "@babel/plugin-proposal-json-strings": "7.2.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "7.2.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.4.4",
-    "@babel/plugin-proposal-numeric-separator": "7.2.0",
-    "@babel/plugin-proposal-optional-chaining": "7.6.0",
-    "@babel/plugin-proposal-pipeline-operator": "7.5.0",
-    "@babel/plugin-proposal-throw-expressions": "7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-syntax-import-meta": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.6.2",
-    "@babel/preset-env": "7.6.3",
-    "autoprefixer": "9.6.5",
+    "@babel/cli": "7.7.4",
+    "@babel/core": "7.7.4",
+    "@babel/node": "7.7.4",
+    "@babel/plugin-proposal-class-properties": "7.7.4",
+    "@babel/plugin-proposal-decorators": "7.7.4",
+    "@babel/plugin-proposal-do-expressions": "7.7.4",
+    "@babel/plugin-proposal-export-default-from": "7.7.4",
+    "@babel/plugin-proposal-export-namespace-from": "7.7.4",
+    "@babel/plugin-proposal-function-bind": "7.7.4",
+    "@babel/plugin-proposal-function-sent": "7.7.4",
+    "@babel/plugin-proposal-json-strings": "7.7.4",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.7.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.7.4",
+    "@babel/plugin-proposal-numeric-separator": "7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "7.7.4",
+    "@babel/plugin-proposal-pipeline-operator": "7.7.4",
+    "@babel/plugin-proposal-throw-expressions": "7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "7.7.4",
+    "@babel/plugin-syntax-import-meta": "7.7.4",
+    "@babel/plugin-transform-runtime": "7.7.4",
+    "@babel/preset-env": "7.7.4",
+    "autoprefixer": "9.7.2",
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
@@ -79,15 +81,15 @@
     "babel-plugin-remove-webpack": "1.1.0",
     "browser-sync": "2.26.7",
     "browser-sync-webpack-plugin": "2.2.2",
-    "chokidar": "3.2.2",
-    "copy-webpack-plugin": "5.0.4",
-    "core-js": "3.3.3",
+    "chokidar": "3.3.0",
+    "copy-webpack-plugin": "5.0.5",
+    "core-js": "3.4.2",
     "cross-env": "6.0.3",
     "css-loader": "3.2.0",
     "decache": "4.5.1",
     "del-cli": "3.0.0",
     "env-cmd": "10.0.1",
-    "eslint": "6.5.1",
+    "eslint": "6.7.0",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-import-resolver-alias": "1.1.2",
@@ -95,16 +97,17 @@
     "eslint-loader": "3.0.2",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-vue": "5.2.3",
-    "file-loader": "4.2.0",
+    "eslint-plugin-vue": "6.0.1",
+    "file-loader": "4.3.0",
     "friendly-errors-webpack-plugin": "1.7.0",
     "html-webpack-plugin": "3.2.0",
-    "husky": "3.0.9",
+    "husky": "3.1.0",
     "ignore-loader": "0.1.2",
     "image-webpack-loader": "6.0.0",
+    "lint-staged": "9.4.3",
     "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "4.12.0",
-    "nodemon": "1.19.4",
+    "node-sass": "4.13.0",
+    "nodemon": "2.0.1",
     "npm-run-all": "4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "postcss-loader": "3.0.0",
@@ -112,17 +115,17 @@
     "release-it": "12.4.3",
     "sass-loader": "8.0.0",
     "style-loader": "1.0.0",
-    "stylelint": "11.1.1",
-    "stylelint-config-twbs-bootstrap": "0.7.0",
-    "stylelint-webpack-plugin": "1.0.2",
+    "stylelint": "12.0.0",
+    "stylelint-config-twbs-bootstrap": "1.0.0",
+    "stylelint-webpack-plugin": "1.1.0",
     "svg-to-vue-component": "0.3.8",
     "terser-webpack-plugin": "2.2.1",
-    "url-loader": "2.2.0",
-    "vue-eslint-parser": "6.0.4",
-    "vue-loader": "15.7.1",
+    "url-loader": "2.3.0",
+    "vue-eslint-parser": "7.0.0",
+    "vue-loader": "15.7.2",
     "vue-template-compiler": "2.6.10",
     "webpack": "4.41.2",
-    "webpack-cli": "3.3.9",
+    "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.9.0",
     "webpack-node-externals": "1.7.2",
     "webpack-notifier": "1.8.0",
@@ -331,8 +334,19 @@
   "husky": {
     "hooks": {
       "post-merge": "npm i",
+      "pre-commit": "lint-staged",
       "pre-push": "npm run lint"
     }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "eslint . --fix",
+      "git add"
+    ],
+    "src/**/*.{css,scss}": [
+      "stylelint --syntax scss --fix",
+      "git add"
+    ]
   },
   "release-it": {
     "npm": {
@@ -341,7 +355,7 @@
   },
   "nodemonConfig": {
     "exec": "babel-node",
-    "watch": "src/server",
+    "watch": ["src/server"],
     "ext": "js,njk,json"
   }
 }
