fixed copy script

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
+BABEL_ENV=browser
 NODE_ENV=development
 SERVER_ENV=local
 PORT=8080
 DEFAULT_LANGUAGE=ru
+
+# ACCEPTED_LANGUAGES are pipe separated values
+# They are used as a part of router path regexp
 ACCEPTED_LANGUAGES=ru|en|de|fr|it
+
 REDIS_URI=
 # TTL DEFINED IN SECONDS
 CACHE_TTL=
