--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "run-p _lint:*",
     "tsc": "vue-tsc --noEmit",
     "build": "run-s _clean _build",
+    "build:docker": "docker build . -t vueltimate-boilerplate:latest",
     "build:stats": "cross-env WITH_STATS=true yarn build",
-    "start": "node dist/server.js",
+    "start": "node dist/server/server.js | pino-pretty",
     "start:local": "yarn build && env-cmd node dist/server/server.js",
     "⚙️": "######################## TECHNICAL SCRIPTS ########################",
     "prettier": "prettier . --ignore-path .gitignore",
@@ -26,6 +27,7 @@
     "_dev:server:wait": "env-cmd -i wait-on http://localhost:{{WDS_PORT}}/public/manifest.json",
     "_dev:server:run": "nodemon",
     "_dev:public": "yarn _build:public --watch",
+    "_dev:docker-compose": "docker compose up -d",
     "_lint:stylelint": "stylelint \"**/*.{css,scss,vue}\" --ignore-path .gitignore",
     "_lint:eslint": "eslint . --ignore-path .gitignore",
     "_clean": "rm -rf dist",
@@ -53,8 +55,8 @@
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.14",
     "@types/express-pino-logger": "4.0.3",
-    "@types/html-webpack-plugin": "3.2.6",
     "@types/json-stringify-safe": "5.0.0",
+    "@types/lodash": "4.14.191",
     "@types/node": "18.11.10",
     "@types/nunjucks": "3.2.1",
     "@types/serialize-javascript": "5.0.2",
@@ -131,6 +133,7 @@
     "express-pino-logger": "7.0.0",
     "iltorb": "2.4.5",
     "json-stringify-safe": "5.0.1",
+    "lodash": "4.17.21",
     "lru-cache": "7.14.1",
     "node-zopfli-es": "2.0.1",
     "nunjucks": "3.2.3",
