feat: telemetry headers

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,21 @@
 ###### Required ######
 PORT=8080
 DEBUG=please
-NODE_ENV=development
+NODE_ENV=production
 SERVER_ENV=local
 DEFAULT_LANGUAGE=en
 ACCEPTED_LANGUAGES=de,en
 
 ###### Optional ######
 ENABLE_DEBUG=true
-REDIS_URL=
-DISABLE_LOG=true
 
-CACHE_TTL=3
+CACHE_TTL=10
 CACHE_ENABLED=true
 CACHE_KEY_SALT=123123
+
+REDIS_URL=redis://default:secret@localhost:6379
+
+DISABLE_LOG=false
 
 ###### Development ######
 WDS_PORT=8081
