feat: improved linting, caching and rendering

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,29 @@
 ###### Required ######
 PORT=8080
-DEBUG=please
-NODE_ENV=production
+ENABLE_DEBUG=please
+NODE_ENV=development
 SERVER_ENV=local
 DEFAULT_LANGUAGE=en
 ACCEPTED_LANGUAGES=de,en
 
-CACHE_TTL=10
-CACHE_ENABLED=true
-CACHE_KEY_SALT=123123
-
 ###### Optional ######
-ENABLE_DEBUG=true
+DEBUG=true
+
+LOG=false
 
 REDIS_URL=redis://default:secret@localhost:6379
 
-DISABLE_LOG=false
+CACHE=true
+
+RENDER_CACHE=true
+RENDER_CACHE_TTL=60
+RENDER_CACHE_SALT=123123
+
+CRITICAL_CSS_CACHE=true
+CRITICAL_CSS_CACHE_TTL=60
+CRITICAL_CSS_CACHE_SALT=123123
 
 ###### Development ######
 WDS_PORT=8081
+REDIS_PORT=6379
+REDIS_PASSWORD=secret
