--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: redis:alpine
     restart: always
     ports:
-      - $REDIS_PORT:6379
-    command: redis-server --requirepass $REDIS_PASSWORD
+      - ${REDIS_PORT}:6379
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     volumes:
       - .data/redis:/data
