--- a/package.json
+++ b/package.json
@@ -50,30 +50,30 @@
     "@commitlint/config-conventional": "17.3.0",
     "@swc-node/register": "1.5.4",
     "@swc/cli": "0.1.57",
-    "@swc/core": "1.3.21",
+    "@swc/core": "1.3.24",
     "@swc/helpers": "0.4.14",
     "@types/cookie-parser": "1.4.3",
-    "@types/express": "4.17.14",
+    "@types/express": "4.17.15",
     "@types/express-pino-logger": "4.0.3",
     "@types/json-stringify-safe": "5.0.0",
     "@types/lodash": "4.14.191",
-    "@types/node": "18.11.10",
+    "@types/node": "18.11.17",
     "@types/nunjucks": "3.2.1",
     "@types/serialize-javascript": "5.0.2",
     "@types/serve-favicon": "2.5.3",
     "@types/webpack": "5.28.0",
     "@types/webpack-node-externals": "2.5.3",
-    "@typescript-eslint/eslint-plugin": "5.45.1",
-    "@typescript-eslint/parser": "5.45.1",
+    "@typescript-eslint/eslint-plugin": "5.47.0",
+    "@typescript-eslint/parser": "5.47.0",
     "@vue/eslint-config-prettier": "7.0.0",
     "@vue/eslint-config-typescript": "11.0.2",
     "autoprefixer": "10.4.13",
-    "bundle-stats-webpack-plugin": "4.1.4",
+    "bundle-stats-webpack-plugin": "4.1.6",
     "chokidar": "3.5.3",
     "commitlint": "17.3.0",
     "cross-env": "7.0.3",
-    "css-loader": "6.7.2",
-    "eslint": "8.29.0",
+    "css-loader": "6.7.3",
+    "eslint": "8.30.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.5.0",
@@ -84,22 +84,22 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-simple-import-sort": "8.0.0",
     "eslint-plugin-tsc": "2.0.0",
-    "eslint-plugin-unicorn": "45.0.1",
+    "eslint-plugin-unicorn": "45.0.2",
     "eslint-plugin-unused-imports": "2.0.0",
     "eslint-plugin-vue": "9.8.0",
     "file-loader": "6.2.0",
     "husky": "8.0.2",
     "ignore-loader": "0.1.2",
-    "lint-staged": "13.0.4",
-    "mini-css-extract-plugin": "2.7.1",
+    "lint-staged": "13.1.0",
+    "mini-css-extract-plugin": "2.7.2",
     "nodemon": "2.0.20",
     "npm-run-all": "4.1.5",
     "pino-pretty": "9.1.1",
-    "postcss": "8.4.19",
+    "postcss": "8.4.20",
     "postcss-html": "1.5.0",
     "postcss-loader": "7.0.2",
-    "prettier": "2.8.0",
-    "sass": "1.56.1",
+    "prettier": "2.8.1",
+    "sass": "1.57.1",
     "sass-loader": "13.2.0",
     "shx": "0.3.4",
     "stylelint": "14.16.0",
@@ -110,41 +110,40 @@
     "terser-webpack-plugin": "5.3.6",
     "ts-node": "10.9.1",
     "tsconfig-paths-webpack-plugin": "4.0.0",
-    "typescript": "4.9.3",
+    "typescript": "4.9.4",
     "url-loader": "4.1.1",
     "vue-loader": "17.0.1",
     "vue-style-loader": "4.1.3",
     "vue-template-compiler": "2.7.14",
-    "vue-tsc": "1.0.10",
-    "wait-on": "6.0.1",
+    "vue-tsc": "1.0.16",
+    "wait-on": "7.0.1",
     "webpack": "5.75.0",
-    "webpack-cli": "5.0.0",
+    "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1",
     "webpack-manifest-plugin": "5.0.0",
     "webpack-node-externals": "3.0.0"
   },
   "dependencies": {
     "@popperjs/core": "2.11.6",
-    "axios": "1.2.0",
+    "axios": "1.2.1",
     "bootstrap": "5.2.3",
     "cookie-parser": "1.4.6",
     "decache": "4.6.1",
     "express": "4.18.2",
     "express-pino-logger": "7.0.0",
-    "iltorb": "2.4.5",
+    "express-static-gzip": "2.1.7",
     "json-stringify-safe": "5.0.1",
     "lodash": "4.17.21",
     "lru-cache": "7.14.1",
-    "node-zopfli-es": "2.0.1",
     "nunjucks": "3.2.3",
     "path-to-regexp": "6.2.1",
-    "pinia": "2.0.27",
-    "pino": "8.7.0",
+    "pinia": "2.0.28",
+    "pino": "8.8.0",
     "purgecss": "5.0.0",
     "redis": "4.5.1",
     "serialize-javascript": "6.0.0",
     "serve-favicon": "2.5.0",
-    "shrink-ray-current": "4.1.3",
+    "shrink-ray-without-zopfli": "1.0.1",
     "surenv": "1.1.0",
     "vue": "3.2.45",
     "vue-router": "4.1.6"
