--- a/package.json
+++ b/package.json
@@ -52,33 +52,33 @@
   "devDependencies": {
     "@b12k/branch-name-lint": "1.0.3",
     "@b12k/env-cmd": "10.2.0",
-    "@commitlint/config-conventional": "17.4.2",
-    "@swc-node/register": "1.5.5",
-    "@swc/cli": "0.1.59",
-    "@swc/core": "1.3.27",
+    "@commitlint/config-conventional": "17.4.4",
+    "@swc-node/register": "1.6.2",
+    "@swc/cli": "0.1.62",
+    "@swc/core": "1.3.37",
     "@swc/helpers": "0.4.14",
     "@types/cookie-parser": "1.4.3",
-    "@types/express": "4.17.15",
+    "@types/express": "4.17.17",
     "@types/express-pino-logger": "4.0.3",
     "@types/json-stringify-safe": "5.0.0",
     "@types/lodash": "4.14.191",
-    "@types/node": "18.11.18",
-    "@types/nunjucks": "3.2.1",
+    "@types/node": "18.14.5",
+    "@types/nunjucks": "3.2.2",
     "@types/serialize-javascript": "5.0.2",
     "@types/serve-favicon": "2.5.3",
     "@types/webpack": "5.28.0",
-    "@types/webpack-node-externals": "2.5.3",
-    "@typescript-eslint/eslint-plugin": "5.48.2",
-    "@typescript-eslint/parser": "5.48.2",
-    "@vue/eslint-config-prettier": "7.0.0",
+    "@types/webpack-node-externals": "3.0.0",
+    "@typescript-eslint/eslint-plugin": "5.54.0",
+    "@typescript-eslint/parser": "5.54.0",
+    "@vue/eslint-config-prettier": "7.1.0",
     "@vue/eslint-config-typescript": "11.0.2",
     "autoprefixer": "10.4.13",
-    "bundle-stats-webpack-plugin": "4.1.8",
+    "bundle-stats-webpack-plugin": "4.2.3",
     "chokidar": "3.5.3",
-    "commitlint": "17.4.2",
+    "commitlint": "17.4.4",
     "cross-env": "7.0.3",
     "css-loader": "6.7.3",
-    "eslint": "8.32.0",
+    "eslint": "8.35.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.6.0",
@@ -87,7 +87,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-simple-import-sort": "9.0.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-tsc": "2.0.0",
     "eslint-plugin-unicorn": "45.0.2",
     "eslint-plugin-unused-imports": "2.0.0",
@@ -95,32 +95,32 @@
     "file-loader": "6.2.0",
     "husky": "8.0.3",
     "ignore-loader": "0.1.2",
-    "lint-staged": "13.1.0",
+    "lint-staged": "13.1.2",
     "mini-css-extract-plugin": "2.7.2",
-    "nodemon": "2.0.20",
+    "nodemon": "2.0.21",
     "npm-run-all": "4.1.5",
-    "pino-pretty": "9.1.1",
+    "pino-pretty": "9.4.0",
     "postcss": "8.4.21",
     "postcss-html": "1.5.0",
     "postcss-loader": "7.0.2",
-    "prettier": "2.8.3",
-    "sass": "1.57.1",
+    "prettier": "2.8.4",
+    "sass": "1.58.3",
     "sass-loader": "13.2.0",
     "shx": "0.3.4",
-    "stylelint": "14.16.1",
+    "stylelint": "15.2.0",
     "stylelint-config-prettier-scss": "0.0.1",
     "stylelint-config-recommended-vue": "1.4.0",
-    "stylelint-config-standard-scss": "6.1.0",
+    "stylelint-config-standard-scss": "7.0.1",
     "swc-loader": "0.2.3",
     "terser-webpack-plugin": "5.3.6",
     "ts-node": "10.9.1",
     "tsconfig-paths-webpack-plugin": "4.0.0",
-    "typescript": "4.9.4",
+    "typescript": "4.9.5",
     "url-loader": "4.1.1",
     "vue-loader": "17.0.1",
     "vue-style-loader": "4.1.3",
     "vue-template-compiler": "2.7.14",
-    "vue-tsc": "1.0.24",
+    "vue-tsc": "1.2.0",
     "wait-on": "7.0.1",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
@@ -129,8 +129,9 @@
     "webpack-node-externals": "3.0.0"
   },
   "dependencies": {
+    "@b12k/vue3-router-gmc": "0.0.2",
     "@popperjs/core": "2.11.6",
-    "axios": "1.2.3",
+    "axios": "1.3.4",
     "bootstrap": "5.2.3",
     "cookie-parser": "1.4.6",
     "decache": "4.6.1",
@@ -139,18 +140,18 @@
     "express-static-gzip": "2.1.7",
     "json-stringify-safe": "5.0.1",
     "lodash": "4.17.21",
-    "lru-cache": "7.14.1",
+    "lru-cache": "7.18.1",
     "nunjucks": "3.2.3",
     "path-to-regexp": "6.2.1",
-    "pinia": "2.0.29",
-    "pino": "8.8.0",
+    "pinia": "2.0.32",
+    "pino": "8.11.0",
     "purgecss": "5.0.0",
-    "redis": "4.5.1",
+    "redis": "4.6.5",
     "serialize-javascript": "6.0.1",
     "serve-favicon": "2.5.0",
     "shrink-ray-without-zopfli": "1.0.1",
     "surenv": "1.1.0",
-    "vue": "3.2.45",
+    "vue": "3.2.47",
     "vue-router": "4.1.6"
   }
 }
