--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vueltimate-boilerplate",
+  "name": "the-boilerplate-vue",
   "author": "Bogdan Kolesnyk",
   "repository": "https://github.com/b12k/vueltimate-boilerplate",
   "license": "MIT",
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "node": "18",
+    "node": "20",
     "yarn": "1"
   },
   "packageManager": "yarn@1.22.19",
@@ -52,86 +52,84 @@
   "devDependencies": {
     "@b12k/branch-name-lint": "1.0.3",
     "@b12k/env-cmd": "10.2.0",
-    "@commitlint/config-conventional": "17.4.4",
-    "@swc-node/register": "1.6.3",
+    "@commitlint/config-conventional": "17.6.3",
+    "@swc-node/register": "1.6.5",
     "@swc/cli": "0.1.62",
-    "@swc/core": "1.3.44",
-    "@swc/helpers": "0.4.14",
+    "@swc/core": "1.3.57",
+    "@swc/helpers": "0.5.1",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.17",
     "@types/express-pino-logger": "4.0.3",
     "@types/json-stringify-safe": "5.0.0",
-    "@types/lodash": "4.14.192",
-    "@types/node": "18.15.11",
+    "@types/lodash": "4.14.194",
+    "@types/node": "20.1.1",
     "@types/nunjucks": "3.2.2",
     "@types/serialize-javascript": "5.0.2",
-    "@types/serve-favicon": "2.5.3",
+    "@types/serve-favicon": "2.5.4",
     "@types/webpack": "5.28.1",
-    "@types/webpack-node-externals": "3.0.0",
-    "@typescript-eslint/eslint-plugin": "5.57.0",
-    "@typescript-eslint/parser": "5.57.0",
+    "@typescript-eslint/eslint-plugin": "5.59.5",
+    "@typescript-eslint/parser": "5.59.5",
     "@vue/eslint-config-prettier": "7.1.0",
-    "@vue/eslint-config-typescript": "11.0.2",
+    "@vue/eslint-config-typescript": "11.0.3",
     "autoprefixer": "10.4.14",
-    "bundle-stats-webpack-plugin": "4.2.5",
+    "bundle-stats-webpack-plugin": "4.3.4",
     "chokidar": "3.5.3",
-    "commitlint": "17.5.1",
+    "commitlint": "17.6.3",
     "cross-env": "7.0.3",
     "css-loader": "6.7.3",
-    "eslint": "8.37.0",
+    "eslint": "8.40.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.8.0",
-    "eslint-import-resolver-typescript": "3.5.4",
+    "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-tsc": "2.0.0",
-    "eslint-plugin-unicorn": "46.0.0",
+    "eslint-plugin-unicorn": "47.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "eslint-plugin-vue": "9.10.0",
+    "eslint-plugin-vue": "9.11.1",
     "file-loader": "6.2.0",
     "husky": "8.0.3",
     "ignore-loader": "0.1.2",
-    "lint-staged": "13.2.0",
+    "lint-staged": "13.2.2",
     "mini-css-extract-plugin": "2.7.5",
     "nodemon": "2.0.22",
     "npm-run-all": "4.1.5",
     "pino-pretty": "10.0.0",
-    "postcss": "8.4.21",
+    "postcss": "8.4.23",
     "postcss-html": "1.5.0",
-    "postcss-loader": "7.1.0",
-    "prettier": "2.8.7",
-    "sass": "1.60.0",
+    "postcss-loader": "7.3.0",
+    "prettier": "2.8.8",
+    "sass": "1.62.1",
     "sass-loader": "13.2.2",
     "shx": "0.3.4",
-    "stylelint": "15.4.0",
+    "stylelint": "15.6.1",
     "stylelint-config-prettier-scss": "0.0.1",
     "stylelint-config-recommended-vue": "1.4.0",
-    "stylelint-config-standard-scss": "7.0.1",
+    "stylelint-config-standard-scss": "9.0.0",
     "swc-loader": "0.2.3",
-    "terser-webpack-plugin": "5.3.7",
+    "terser-webpack-plugin": "5.3.8",
     "ts-node": "10.9.1",
     "tsconfig-paths-webpack-plugin": "4.0.1",
-    "typescript": "5.0.3",
+    "typescript": "5.0.4",
     "url-loader": "4.1.1",
-    "vue-loader": "17.0.1",
+    "vue-loader": "17.1.0",
     "vue-style-loader": "4.1.3",
     "vue-template-compiler": "2.7.14",
-    "vue-tsc": "1.2.0",
+    "vue-tsc": "1.6.4",
     "wait-on": "7.0.1",
-    "webpack": "5.77.0",
-    "webpack-cli": "5.0.1",
-    "webpack-dev-server": "4.13.2",
-    "webpack-manifest-plugin": "5.0.0",
-    "webpack-node-externals": "3.0.0"
+    "webpack": "5.82.0",
+    "webpack-cli": "5.1.1",
+    "webpack-dev-server": "4.15.0",
+    "webpack-manifest-plugin": "5.0.0"
   },
   "dependencies": {
     "@b12k/vue3-router-gmc": "0.1.3",
     "@popperjs/core": "2.11.7",
-    "axios": "1.3.4",
+    "axios": "1.4.0",
     "bootstrap": "5.2.3",
     "cookie-parser": "1.4.6",
     "decache": "4.6.1",
@@ -140,13 +138,13 @@
     "express-static-gzip": "2.1.7",
     "json-stringify-safe": "5.0.1",
     "lodash": "4.17.21",
-    "lru-cache": "8.0.4",
-    "nunjucks": "3.2.3",
+    "lru-cache": "9.1.1",
+    "nunjucks": "3.2.4",
     "path-to-regexp": "6.2.1",
-    "pinia": "2.0.33",
-    "pino": "8.11.0",
+    "pinia": "2.0.36",
+    "pino": "8.14.1",
     "purgecss": "5.0.0",
-    "redis": "4.6.5",
+    "redis": "4.6.6",
     "serialize-javascript": "6.0.1",
     "serve-favicon": "2.5.0",
     "shrink-ray-without-zopfli": "1.0.1",
