--- a/package.json
+++ b/package.json
@@ -134,7 +134,6 @@
     "cookie-parser": "1.4.6",
     "decache": "4.6.1",
     "express": "4.18.2",
-    "express-pino-logger": "7.0.0",
     "express-static-gzip": "2.1.7",
     "json-stringify-safe": "5.0.1",
     "lodash": "4.17.21",
@@ -143,6 +142,7 @@
     "path-to-regexp": "6.2.1",
     "pinia": "2.0.36",
     "pino": "8.14.1",
+    "pino-http": "8.3.3",
     "purgecss": "5.0.0",
     "redis": "4.6.6",
     "serialize-javascript": "6.0.1",
