--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@types/express-pino-logger": "4.0.3",
     "@types/json-stringify-safe": "5.0.0",
     "@types/lodash": "4.14.194",
-    "@types/node": "20.1.1",
+    "@types/node": "20.1.3",
     "@types/nunjucks": "3.2.2",
     "@types/serialize-javascript": "5.0.2",
     "@types/serve-favicon": "2.5.4",
@@ -90,7 +90,7 @@
     "eslint-plugin-tsc": "2.0.0",
     "eslint-plugin-unicorn": "47.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "eslint-plugin-vue": "9.11.1",
+    "eslint-plugin-vue": "9.12.0",
     "file-loader": "6.2.0",
     "husky": "8.0.3",
     "ignore-loader": "0.1.2",
@@ -107,7 +107,7 @@
     "sass-loader": "13.2.2",
     "shx": "0.3.4",
     "stylelint": "15.6.1",
-    "stylelint-config-prettier-scss": "0.0.1",
+    "stylelint-config-prettier-scss": "1.0.0",
     "stylelint-config-recommended-vue": "1.4.0",
     "stylelint-config-standard-scss": "9.0.0",
     "swc-loader": "0.2.3",
@@ -116,12 +116,12 @@
     "tsconfig-paths-webpack-plugin": "4.0.1",
     "typescript": "5.0.4",
     "url-loader": "4.1.1",
-    "vue-loader": "17.1.0",
+    "vue-loader": "17.1.1",
     "vue-style-loader": "4.1.3",
     "vue-template-compiler": "2.7.14",
     "vue-tsc": "1.6.4",
     "wait-on": "7.0.1",
-    "webpack": "5.82.0",
+    "webpack": "5.82.1",
     "webpack-cli": "5.1.1",
     "webpack-dev-server": "4.15.0",
     "webpack-manifest-plugin": "5.0.0"
@@ -129,12 +129,13 @@
   "dependencies": {
     "@b12k/vue3-router-gmc": "0.1.3",
     "@popperjs/core": "2.11.7",
+    "@unhead/ssr": "1.1.26",
+    "@unhead/vue": "1.1.26",
     "axios": "1.4.0",
     "bootstrap": "5.2.3",
     "cookie-parser": "1.4.6",
     "decache": "4.6.1",
     "express": "4.18.2",
-    "express-pino-logger": "7.0.0",
     "express-static-gzip": "2.1.7",
     "json-stringify-safe": "5.0.1",
     "lodash": "4.17.21",
@@ -143,13 +144,14 @@
     "path-to-regexp": "6.2.1",
     "pinia": "2.0.36",
     "pino": "8.14.1",
+    "pino-http": "8.3.3",
     "purgecss": "5.0.0",
     "redis": "4.6.6",
     "serialize-javascript": "6.0.1",
     "serve-favicon": "2.5.0",
     "shrink-ray-without-zopfli": "1.0.1",
     "surenv": "1.1.0",
-    "vue": "3.2.47",
-    "vue-router": "4.1.6"
+    "vue": "3.3.1",
+    "vue-router": "4.2.0"
   }
 }
