feat: deps update and csp headers middleware

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "build": "run-s _clean _build",
     "build:docker": "docker build . -t vueltimate-boilerplate:latest",
     "build:stats": "cross-env WITH_STATS=true yarn build",
-    "start": "node dist/server/server.js | pino-pretty",
-    "start:local": "yarn build && env-cmd node dist/server/server.js",
+    "start": "node dist | pino-pretty",
+    "start:local": "yarn build && env-cmd node dist",
     "⚙️": "######################## TECHNICAL SCRIPTS ########################",
     "prepare": "run-p _prepare:*",
     "_prepare:env": "shx cp -u .env.example .env",
@@ -40,7 +40,9 @@
     "_build:client": "run-p _build:client:*",
     "_build:client:ssr": "webpack -c webpack/config.server.ts",
     "_build:client:browser": "webpack -c webpack/config.browser.ts",
-    "_build:server": "swc ./src/server -d ./dist --copy-files --config-file server.swcrc",
+    "_build:server": "run-p _build:server:*",
+    "_build:server:src": "swc ./src/server -d ./dist --copy-files --config-file server.swcrc",
+    "_build:server:entry": "swc ./src/index.ts -o ./dist/index.js --config-file server.swcrc",
     "_build:public": "swc ./src/public -d ./dist --copy-files --config-file public.swcrc",
     "🪝": "############################ GIT HOOKS ############################",
     "_git:commit-msg": "commitlint",
@@ -52,8 +54,8 @@
   "devDependencies": {
     "@b12k/branch-name-lint": "1.0.3",
     "@b12k/env-cmd": "10.2.0",
-    "@commitlint/config-conventional": "17.6.5",
-    "@swc-node/register": "1.6.5",
+    "@commitlint/config-conventional": "17.6.6",
+    "@swc-node/register": "1.6.6",
     "@swc/cli": "0.1.62",
     "@swc/core": "1.3.66",
     "@swc/helpers": "0.5.1",
@@ -62,19 +64,19 @@
     "@types/express-pino-logger": "4.0.3",
     "@types/json-stringify-safe": "5.0.0",
     "@types/lodash": "4.14.195",
-    "@types/node": "20.3.1",
+    "@types/node": "20.3.2",
     "@types/nunjucks": "3.2.2",
     "@types/serialize-javascript": "5.0.2",
     "@types/serve-favicon": "2.5.4",
     "@types/webpack": "5.28.1",
-    "@typescript-eslint/eslint-plugin": "5.60.0",
-    "@typescript-eslint/parser": "5.60.0",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
     "@vue/eslint-config-prettier": "7.1.0",
     "@vue/eslint-config-typescript": "11.0.3",
     "autoprefixer": "10.4.14",
     "bundle-stats-webpack-plugin": "4.4.2",
     "chokidar": "3.5.3",
-    "commitlint": "17.6.5",
+    "commitlint": "17.6.6",
     "cross-env": "7.0.3",
     "css-loader": "6.8.1",
     "eslint": "8.43.0",
@@ -90,7 +92,7 @@
     "eslint-plugin-tsc": "2.0.0",
     "eslint-plugin-unicorn": "47.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "eslint-plugin-vue": "9.15.0",
+    "eslint-plugin-vue": "9.15.1",
     "file-loader": "6.2.0",
     "husky": "8.0.3",
     "ignore-loader": "0.1.2",
@@ -103,10 +105,10 @@
     "postcss-html": "1.5.0",
     "postcss-loader": "7.3.3",
     "prettier": "2.8.8",
-    "sass": "1.63.4",
+    "sass": "1.63.6",
     "sass-loader": "13.3.2",
     "shx": "0.3.4",
-    "stylelint": "15.8.0",
+    "stylelint": "15.9.0",
     "stylelint-config-prettier-scss": "1.0.0",
     "stylelint-config-recommended-vue": "1.4.0",
     "stylelint-config-standard-scss": "9.0.0",
@@ -119,9 +121,9 @@
     "vue-loader": "17.2.2",
     "vue-style-loader": "4.1.3",
     "vue-template-compiler": "2.7.14",
-    "vue-tsc": "1.8.1",
+    "vue-tsc": "1.8.2",
     "wait-on": "7.0.1",
-    "webpack": "5.87.0",
+    "webpack": "5.88.0",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
     "webpack-manifest-plugin": "5.0.0"
@@ -129,12 +131,12 @@
   "dependencies": {
     "@b12k/vue3-router-gmc": "0.1.3",
     "@popperjs/core": "2.11.8",
-    "@unhead/ssr": "1.1.27",
-    "@unhead/vue": "1.1.27",
+    "@unhead/ssr": "1.1.28",
+    "@unhead/vue": "1.1.28",
     "axios": "1.4.0",
     "bootstrap": "5.3.0",
     "cookie-parser": "1.4.6",
-    "decache": "4.6.1",
+    "decache": "4.6.2",
     "express": "4.18.2",
     "express-static-gzip": "2.1.7",
     "json-stringify-safe": "5.0.1",
