--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "decache": "4.6.2",
     "express": "4.18.2",
     "express-static-gzip": "2.1.7",
+    "helmet": "7.0.0",
     "json-stringify-safe": "5.0.1",
     "lodash": "4.17.21",
     "lru-cache": "10.0.0",
