feat: deps update

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ ACCEPTED_LANGUAGES=de,en
 ###### Optional ######
 DEBUG=true
 
-LOG=false
+LOG_LEVEL=info
 
 REDIS_URL=redis://default:secret@localhost:6379
 
