feat: deps cleanup and caching tweaks

--- a/package.json
+++ b/package.json
@@ -137,10 +137,10 @@
     "bootstrap": "5.3.0",
     "cookie-parser": "1.4.6",
     "decache": "4.6.2",
+    "deep-object-diff": "1.1.9",
     "express": "4.18.2",
-    "express-static-gzip": "2.1.7",
     "helmet": "7.0.0",
-    "json-stringify-safe": "5.0.1",
+    "is-mobile": "4.0.0",
     "lodash": "4.17.21",
     "lru-cache": "10.0.0",
     "nunjucks": "3.2.4",
