--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "node": "18",
+    "node": "20",
     "yarn": "1"
   },
   "packageManager": "yarn@1.22.19",
@@ -52,78 +52,78 @@
     "_git:pre-push": "branch-name-lint"
   },
   "devDependencies": {
-    "@b12k/branch-name-lint": "1.0.3",
+    "@b12k/branch-name-lint": "1.1.0",
     "@b12k/env-cmd": "10.2.0",
-    "@commitlint/config-conventional": "17.6.6",
+    "@commitlint/config-conventional": "17.7.0",
     "@swc-node/register": "1.6.6",
     "@swc/cli": "0.1.62",
-    "@swc/core": "1.3.66",
+    "@swc/core": "1.3.75",
     "@swc/helpers": "0.5.1",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.17",
     "@types/express-pino-logger": "4.0.3",
     "@types/json-stringify-safe": "5.0.0",
-    "@types/lodash": "4.14.195",
-    "@types/node": "20.3.2",
-    "@types/nunjucks": "3.2.2",
+    "@types/lodash": "4.14.196",
+    "@types/node": "20.4.9",
+    "@types/nunjucks": "3.2.3",
     "@types/serialize-javascript": "5.0.2",
     "@types/serve-favicon": "2.5.4",
     "@types/webpack": "5.28.1",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
-    "@vue/eslint-config-prettier": "7.1.0",
+    "@typescript-eslint/eslint-plugin": "6.3.0",
+    "@typescript-eslint/parser": "6.3.0",
+    "@vue/eslint-config-prettier": "8.0.0",
     "@vue/eslint-config-typescript": "11.0.3",
     "autoprefixer": "10.4.14",
-    "bundle-stats-webpack-plugin": "4.4.2",
+    "bundle-stats-webpack-plugin": "4.5.2",
     "chokidar": "3.5.3",
-    "commitlint": "17.6.6",
+    "commitlint": "17.7.0",
     "cross-env": "7.0.3",
     "css-loader": "6.8.1",
-    "eslint": "8.43.0",
+    "eslint": "8.46.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.8.0",
+    "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-tsc": "2.0.0",
-    "eslint-plugin-unicorn": "47.0.0",
-    "eslint-plugin-unused-imports": "2.0.0",
-    "eslint-plugin-vue": "9.15.1",
+    "eslint-plugin-unicorn": "48.0.1",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "eslint-plugin-vue": "9.16.1",
     "file-loader": "6.2.0",
     "husky": "8.0.3",
     "ignore-loader": "0.1.2",
-    "lint-staged": "13.2.2",
+    "lint-staged": "13.2.3",
     "mini-css-extract-plugin": "2.7.6",
-    "nodemon": "2.0.22",
+    "nodemon": "3.0.1",
     "npm-run-all": "4.1.5",
-    "pino-pretty": "10.0.0",
-    "postcss": "8.4.24",
+    "pino-pretty": "10.2.0",
+    "postcss": "8.4.27",
     "postcss-html": "1.5.0",
     "postcss-loader": "7.3.3",
-    "prettier": "2.8.8",
-    "sass": "1.63.6",
+    "prettier": "3.0.1",
+    "sass": "1.64.2",
     "sass-loader": "13.3.2",
     "shx": "0.3.4",
-    "stylelint": "15.9.0",
+    "stylelint": "15.10.2",
     "stylelint-config-prettier-scss": "1.0.0",
-    "stylelint-config-recommended-vue": "1.4.0",
-    "stylelint-config-standard-scss": "9.0.0",
+    "stylelint-config-recommended-vue": "1.5.0",
+    "stylelint-config-standard-scss": "10.0.0",
     "swc-loader": "0.2.3",
     "terser-webpack-plugin": "5.3.9",
     "ts-node": "10.9.1",
-    "tsconfig-paths-webpack-plugin": "4.0.1",
-    "typescript": "5.1.3",
+    "tsconfig-paths-webpack-plugin": "4.1.0",
+    "typescript": "5.1.6",
     "url-loader": "4.1.1",
     "vue-loader": "17.2.2",
     "vue-style-loader": "4.1.3",
     "vue-template-compiler": "2.7.14",
-    "vue-tsc": "1.8.2",
+    "vue-tsc": "1.8.8",
     "wait-on": "7.0.1",
-    "webpack": "5.88.0",
+    "webpack": "5.88.2",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
     "webpack-manifest-plugin": "5.0.0"
@@ -131,23 +131,23 @@
   "dependencies": {
     "@b12k/vue3-router-gmc": "0.1.3",
     "@popperjs/core": "2.11.8",
-    "@unhead/ssr": "1.1.28",
-    "@unhead/vue": "1.1.28",
+    "@unhead/ssr": "1.2.2",
+    "@unhead/vue": "1.2.2",
     "axios": "1.4.0",
-    "bootstrap": "5.3.0",
+    "bootstrap": "5.3.1",
     "cookie-parser": "1.4.6",
     "decache": "4.6.2",
+    "deep-object-diff": "1.1.9",
     "express": "4.18.2",
-    "express-static-gzip": "2.1.7",
     "helmet": "7.0.0",
-    "json-stringify-safe": "5.0.1",
+    "is-mobile": "4.0.0",
     "lodash": "4.17.21",
     "lru-cache": "10.0.0",
     "nunjucks": "3.2.4",
     "path-to-regexp": "6.2.1",
-    "pinia": "2.1.4",
-    "pino": "8.14.1",
-    "pino-http": "8.3.3",
+    "pinia": "2.1.6",
+    "pino": "8.15.0",
+    "pino-http": "8.4.0",
     "purgecss": "5.0.0",
     "redis": "4.6.7",
     "serialize-javascript": "6.0.1",
@@ -155,6 +155,6 @@
     "shrink-ray-without-zopfli": "1.0.1",
     "surenv": "1.1.0",
     "vue": "3.3.4",
-    "vue-router": "4.2.2"
+    "vue-router": "4.2.4"
   }
 }
