--- a/package.json
+++ b/package.json
@@ -55,60 +55,61 @@
     "@b12k/branch-name-lint": "1.1.0",
     "@b12k/env-cmd": "10.2.0",
     "@commitlint/config-conventional": "17.7.0",
-    "@swc-node/register": "1.6.6",
+    "@swc-node/register": "1.6.7",
     "@swc/cli": "0.1.62",
-    "@swc/core": "1.3.75",
+    "@swc/core": "1.3.78",
     "@swc/helpers": "0.5.1",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.17",
     "@types/express-pino-logger": "4.0.3",
     "@types/json-stringify-safe": "5.0.0",
-    "@types/lodash": "4.14.196",
-    "@types/node": "20.4.9",
+    "@types/lodash": "4.14.197",
+    "@types/node": "20.5.1",
     "@types/nunjucks": "3.2.3",
     "@types/serialize-javascript": "5.0.2",
     "@types/serve-favicon": "2.5.4",
+    "@types/ua-parser-js": "0.7.36",
     "@types/webpack": "5.28.1",
-    "@typescript-eslint/eslint-plugin": "6.3.0",
-    "@typescript-eslint/parser": "6.3.0",
+    "@typescript-eslint/eslint-plugin": "6.4.1",
+    "@typescript-eslint/parser": "6.4.1",
     "@vue/eslint-config-prettier": "8.0.0",
     "@vue/eslint-config-typescript": "11.0.3",
-    "autoprefixer": "10.4.14",
-    "bundle-stats-webpack-plugin": "4.5.2",
+    "autoprefixer": "10.4.15",
+    "bundle-stats-webpack-plugin": "4.6.2",
     "chokidar": "3.5.3",
-    "commitlint": "17.7.0",
+    "commitlint": "17.7.1",
     "cross-env": "7.0.3",
     "css-loader": "6.8.1",
-    "eslint": "8.46.0",
+    "eslint": "8.47.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-import-resolver-typescript": "3.6.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-import": "2.28.1",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-tsc": "2.0.0",
     "eslint-plugin-unicorn": "48.0.1",
     "eslint-plugin-unused-imports": "3.0.0",
-    "eslint-plugin-vue": "9.16.1",
+    "eslint-plugin-vue": "9.17.0",
     "file-loader": "6.2.0",
     "husky": "8.0.3",
     "ignore-loader": "0.1.2",
-    "lint-staged": "13.2.3",
+    "lint-staged": "14.0.1",
     "mini-css-extract-plugin": "2.7.6",
     "nodemon": "3.0.1",
     "npm-run-all": "4.1.5",
     "pino-pretty": "10.2.0",
-    "postcss": "8.4.27",
+    "postcss": "8.4.28",
     "postcss-html": "1.5.0",
     "postcss-loader": "7.3.3",
-    "prettier": "3.0.1",
-    "sass": "1.64.2",
+    "prettier": "3.0.2",
+    "sass": "1.66.1",
     "sass-loader": "13.3.2",
     "shx": "0.3.4",
-    "stylelint": "15.10.2",
+    "stylelint": "15.10.3",
     "stylelint-config-prettier-scss": "1.0.0",
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard-scss": "10.0.0",
@@ -131,18 +132,18 @@
   "dependencies": {
     "@b12k/vue3-router-gmc": "0.1.3",
     "@popperjs/core": "2.11.8",
-    "@unhead/ssr": "1.2.2",
-    "@unhead/vue": "1.2.2",
+    "@unhead/ssr": "1.3.5",
+    "@unhead/vue": "1.3.5",
     "axios": "1.4.0",
     "bootstrap": "5.3.1",
     "cookie-parser": "1.4.6",
     "decache": "4.6.2",
     "deep-object-diff": "1.1.9",
+    "dotenv": "16.3.1",
     "express": "4.18.2",
     "helmet": "7.0.0",
-    "is-mobile": "4.0.0",
     "lodash": "4.17.21",
-    "lru-cache": "10.0.0",
+    "lru-cache": "10.0.1",
     "nunjucks": "3.2.4",
     "path-to-regexp": "6.2.1",
     "pinia": "2.1.6",
@@ -154,6 +155,7 @@
     "serve-favicon": "2.5.0",
     "shrink-ray-without-zopfli": "1.0.1",
     "surenv": "1.1.0",
+    "ua-parser-js": "1.0.35",
     "vue": "3.3.4",
     "vue-router": "4.2.4"
   }
