--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "dependencies": {
     "@b12k/vue3-router-gmc": "0.1.3",
     "@nitedani/shrink-ray-current": "4.3.0",
-    "@unhead/vue": "2.0.8",
+    "@unhead/vue": "2.0.9",
     "animate.css": "4.1.1",
     "axios": "1.9.0",
     "cookie-parser": "1.4.7",
@@ -72,7 +72,7 @@
     "nunjucks": "3.2.4",
     "path-to-regexp": "8.2.0",
     "pinia": "3.0.2",
-    "pino": "9.6.0",
+    "pino": "9.7.0",
     "pino-http": "10.4.0",
     "pino-pretty": "13.0.0",
     "purgecss": "7.0.2",
@@ -81,7 +81,7 @@
     "serve-favicon": "2.5.0",
     "surenv": "1.1.0",
     "ua-parser-js": "2.0.3",
-    "vue": "3.5.13",
+    "vue": "3.5.14",
     "vue-router": "4.5.1"
   },
   "devDependencies": {
@@ -89,7 +89,7 @@
     "@b12k/env-cmd": "10.2.0",
     "@commitlint/config-conventional": "19.8.1",
     "@eslint/config-inspector": "1.0.2",
-    "@eslint/js": "9.26.0",
+    "@eslint/js": "9.27.0",
     "@rspack/cli": "1.3.10",
     "@rspack/core": "1.3.10",
     "@swc-node/register": "1.10.10",
@@ -98,11 +98,11 @@
     "@swc/helpers": "0.5.17",
     "@types/bootstrap": "5.2.10",
     "@types/cookie-parser": "1.4.8",
-    "@types/express": "5.0.1",
+    "@types/express": "5.0.2",
     "@types/express-pino-logger": "4.0.5",
     "@types/js-cookie": "3.0.6",
     "@types/lodash": "4.17.16",
-    "@types/node": "22.15.17",
+    "@types/node": "22.15.19",
     "@types/nunjucks": "3.2.6",
     "@types/serve-favicon": "2.5.7",
     "@types/ua-parser-js": "0.7.39",
@@ -115,10 +115,10 @@
     "cross-env": "7.0.3",
     "css-loader": "7.1.2",
     "djlint": "1.36.4",
-    "eslint": "9.26.0",
+    "eslint": "9.27.0",
     "eslint-config-prettier": "10.1.5",
-    "eslint-import-resolver-typescript": "4.3.4",
-    "eslint-plugin-import-x": "4.11.1",
+    "eslint-import-resolver-typescript": "4.3.5",
+    "eslint-plugin-import-x": "4.12.2",
     "eslint-plugin-perfectionist": "4.13.0",
     "eslint-plugin-prettier": "5.4.0",
     "eslint-plugin-unicorn": "59.0.1",
@@ -137,7 +137,7 @@
     "prettier": "3.5.3",
     "prettier-plugin-jinja-template": "2.1.0",
     "rspack-manifest-plugin": "5.0.3",
-    "sass": "1.88.0",
+    "sass": "1.89.0",
     "sass-loader": "16.0.5",
     "serve": "14.2.4",
     "shx": "0.4.0",
@@ -145,7 +145,7 @@
     "stylelint": "16.19.1",
     "stylelint-config-prettier-scss": "1.0.0",
     "stylelint-config-recommended-vue": "1.6.0",
-    "stylelint-config-standard-scss": "15.0.0",
+    "stylelint-config-standard-scss": "15.0.1",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
     "typescript-eslint": "8.32.1",
@@ -155,8 +155,5 @@
     "vue-tsc": "2.2.10",
     "wait-on": "8.0.3"
   },
-  "packageManager": "pnpm@10.10.0",
-  "engines": {
-    "node": "22"
-  }
+  "packageManager": "pnpm@10.11.0"
 }
