feat: migrated to tailwind

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@swc/cli": "0.7.8",
     "@swc/core": "1.12.11",
     "@swc/helpers": "0.5.17",
+    "@tailwindcss/postcss": "4.1.11",
     "@types/bootstrap": "5.2.10",
     "@types/cookie-parser": "1.4.9",
     "@types/express": "5.0.3",
@@ -137,8 +138,6 @@
     "prettier": "3.6.2",
     "prettier-plugin-jinja-template": "2.1.0",
     "rspack-manifest-plugin": "5.0.3",
-    "sass": "1.89.2",
-    "sass-loader": "16.0.5",
     "serve": "14.2.4",
     "shx": "0.4.0",
     "sort-package-json": "3.4.0",
@@ -146,6 +145,7 @@
     "stylelint-config-prettier-scss": "1.0.0",
     "stylelint-config-recommended-vue": "1.6.1",
     "stylelint-config-standard-scss": "15.0.1",
+    "tailwindcss": "4.1.11",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
     "typescript-eslint": "8.36.0",
