--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "serve-favicon": "2.5.1",
     "surenv": "1.1.0",
     "ua-parser-js": "2.0.7",
-    "vue": "3.5.25",
+    "vue": "3.5.26",
     "vue-router": "4.6.4"
   },
   "devDependencies": {
@@ -90,11 +90,11 @@
     "@commitlint/config-conventional": "20.2.0",
     "@eslint/config-inspector": "1.4.2",
     "@eslint/js": "9.39.2",
-    "@rspack/cli": "1.6.7",
-    "@rspack/core": "1.6.7",
+    "@rspack/cli": "1.6.8",
+    "@rspack/core": "1.6.8",
     "@swc-node/register": "1.11.1",
     "@swc/cli": "0.7.9",
-    "@swc/core": "1.15.5",
+    "@swc/core": "1.15.7",
     "@swc/helpers": "0.5.17",
     "@tailwindcss/postcss": "4.1.18",
     "@types/bootstrap": "5.2.10",
@@ -108,7 +108,7 @@
     "@types/serve-favicon": "2.5.7",
     "@types/ua-parser-js": "0.7.39",
     "@typescript-eslint/parser": "8.50.0",
-    "@vue/language-server": "3.1.8",
+    "@vue/language-server": "3.2.0",
     "autoprefixer": "10.4.23",
     "bundle-stats-webpack-plugin": "4.21.7",
     "chokidar": "5.0.0",
@@ -119,7 +119,7 @@
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import-x": "4.16.1",
-    "eslint-plugin-perfectionist": "4.15.1",
+    "eslint-plugin-perfectionist": "5.0.0",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-unicorn": "62.0.0",
     "eslint-plugin-vue": "10.6.2",
@@ -130,7 +130,7 @@
     "lint-staged": "16.2.7",
     "nodemon": "3.1.11",
     "npm-check-updates": "19.2.0",
-    "npm-run-all": "4.1.5",
+    "npm-run-all2": "8.0.4",
     "postcss": "8.5.6",
     "postcss-html": "1.8.0",
     "postcss-loader": "8.2.0",
@@ -151,8 +151,8 @@
     "url-loader": "4.1.1",
     "vue-loader": "17.4.2",
     "vue-style-loader": "4.1.3",
-    "vue-tsc": "3.1.8",
+    "vue-tsc": "3.2.0",
     "wait-on": "9.0.3"
   },
-  "packageManager": "pnpm@10.26.0"
+  "packageManager": "pnpm@10.26.1"
 }
