chore: barrel experiments

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ CRITICAL_CSS_CACHE_SALT=123123
 
 ###### Development ######
 WDS_PORT=8081
+BUNDLER_CACHE=true
 REDIS_PORT=6379
 REDIS_PASSWORD=secret
 DOCKER_IMAGE=b12k:the-boilerplate-vue
