feat: deps upgrade and eslint barrel config

--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "build:server": "swc ./src/server -d ./dist --copy-files --strip-leading-paths --config-file server.swcrc",
     "build:public": "swc ./src/public -d ./dist --copy-files --strip-leading-paths --config-file public.swcrc",
     "stats": "cross-env WITH_STATS=true NODE_ENV=production pnpm build && serve ./dist/bundle-stats.html",
-    "start": "node dist/server",
-    "start:local": "nodemon --watch src --watch .env --ext * --exec \"pnpm build && cross-env NODE_ENV=production env-cmd -n node ./dist/server\"",
+    "start": "node dist/server/server",
+    "start:local": "nodemon --watch src --watch .env --ext * --exec \"pnpm build && cross-env NODE_ENV=production env-cmd -n node ./dist/server/server\"",
     "docker:build:amd": "env-cmd -i pnpm _docker-build --cache-from={{DOCKER_IMAGE}}-amd64-latest -t {{DOCKER_IMAGE}}-amd64-latest",
     "docker:build:arm": "env-cmd -i pnpm _docker-build --cache-from={{DOCKER_IMAGE}}-arm64-latest -t {{DOCKER_IMAGE}}-arm64-latest --platform linux/arm64",
     "deploy": "env-cmd -i curl -X POST {{PORTAINER_WEBHOOK}}",
@@ -76,7 +76,7 @@
     "nunjucks": "3.2.4",
     "path-to-regexp": "8.3.0",
     "pinia": "3.0.4",
-    "pino": "10.1.1",
+    "pino": "10.2.1",
     "pino-http": "11.0.0",
     "pino-pretty": "13.1.3",
     "purgecss": "7.0.2",
@@ -84,8 +84,8 @@
     "safe-stable-stringify": "2.5.0",
     "serve-favicon": "2.5.1",
     "surenv": "1.1.0",
-    "ua-parser-js": "2.0.7",
-    "vue": "3.5.26",
+    "ua-parser-js": "2.0.8",
+    "vue": "3.5.27",
     "vue-router": "4.6.4"
   },
   "devDependencies": {
@@ -94,10 +94,10 @@
     "@commitlint/config-conventional": "20.3.1",
     "@eslint/config-inspector": "1.4.2",
     "@eslint/js": "9.39.2",
-    "@rspack/cli": "1.7.1",
-    "@rspack/core": "1.7.1",
+    "@rspack/cli": "1.7.2",
+    "@rspack/core": "1.7.2",
     "@swc-node/register": "1.11.1",
-    "@swc/cli": "0.7.9",
+    "@swc/cli": "0.7.10",
     "@swc/core": "1.15.8",
     "@swc/helpers": "0.5.18",
     "@tailwindcss/postcss": "4.1.18",
@@ -107,11 +107,11 @@
     "@types/express-pino-logger": "4.0.6",
     "@types/js-cookie": "3.0.6",
     "@types/lodash": "4.17.23",
-    "@types/node": "25.0.6",
+    "@types/node": "25.0.9",
     "@types/nunjucks": "3.2.6",
     "@types/serve-favicon": "2.5.7",
     "@types/ua-parser-js": "0.7.39",
-    "@typescript-eslint/parser": "8.52.0",
+    "@typescript-eslint/parser": "8.53.0",
     "@vue/language-server": "3.2.2",
     "autoprefixer": "10.4.23",
     "bundle-stats-webpack-plugin": "4.21.8",
@@ -124,9 +124,9 @@
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import-x": "4.16.1",
     "eslint-plugin-perfectionist": "5.3.1",
-    "eslint-plugin-prettier": "5.5.4",
+    "eslint-plugin-prettier": "5.5.5",
     "eslint-plugin-unicorn": "62.0.0",
-    "eslint-plugin-vue": "10.6.2",
+    "eslint-plugin-vue": "10.7.0",
     "file-loader": "6.2.0",
     "globals": "17.0.0",
     "husky": "9.1.7",
@@ -136,27 +136,29 @@
     "npm-check-updates": "19.3.1",
     "npm-run-all2": "8.0.4",
     "postcss": "8.5.6",
-    "postcss-html": "1.8.0",
+    "postcss-html": "1.8.1",
     "postcss-loader": "8.2.0",
-    "prettier": "3.7.4",
+    "prettier": "3.8.0",
     "prettier-plugin-jinja-template": "2.1.0",
-    "rspack-manifest-plugin": "5.2.0",
+    "rspack-manifest-plugin": "5.2.1",
     "serve": "14.2.5",
     "shx": "0.4.0",
     "sort-package-json": "3.6.0",
-    "stylelint": "16.26.1",
+    "stylelint": "17.0.0",
+    "stylelint-config-html": "1.1.0",
     "stylelint-config-prettier-scss": "1.0.0",
     "stylelint-config-recommended-vue": "1.6.1",
-    "stylelint-config-standard-scss": "16.0.0",
+    "stylelint-config-standard-scss": "17.0.0",
     "tailwindcss": "4.1.18",
     "ts-node": "10.9.2",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.52.0",
+    "typescript-eslint": "8.53.0",
     "url-loader": "4.1.1",
+    "vue-eslint-parser": "10.2.0",
     "vue-loader": "17.4.2",
     "vue-style-loader": "4.1.3",
     "vue-tsc": "3.2.2",
     "wait-on": "9.0.3"
   },
-  "packageManager": "pnpm@10.28.0"
+  "packageManager": "pnpm@10.28.1"
 }
