feat: deps update, server restart and store change reload

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     "useDefineForClassFields": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
+    "types": ["webpack-env"],
     "paths": {
       "@client": ["./src/client"],
       "@server": ["./src/server"]
