--- a/package.json
+++ b/package.json
@@ -5,37 +5,33 @@
   "repository": "https://github.com/b12k/the-boilerplate-vue",
   "license": "MIT",
   "author": "Bogdan Kolesnyk",
-  "sideEffects": [
-    "*.css",
-    "*.vue"
-  ],
   "scripts": {
     "🚀": "████████████████████████ ✋ SCRIPTS 👇 ████████████████████████████",
     "prepare": "run-p prepare:*",
     "prepare:env": "shx cp -u .env.example .env",
     "prepare:husky": "husky",
-    "dev": "run-p dev:*",
-    "dev:client": "run-p dev:client:*",
+    "dev": "run-p -ln dev:*",
+    "dev:client": "run-p -ln dev:client:*",
     "dev:client:browser": "env-cmd pnpm rspack serve -c rspack/config.browser.ts",
     "dev:client:server": "env-cmd pnpm rspack build -c rspack/config.server.ts",
-    "dev:server": "run-s dev:server:*",
+    "dev:server": "run-s -ln dev:server:*",
     "dev:server:wait": "env-cmd -i wait-on http://localhost:{{WDS_PORT}}/public/manifest.json",
     "dev:server:run": "nodemon",
     "dev:public": "pnpm build:public --watch",
     "dev:docker-compose": "docker compose up -d",
     "docker:down": "docker compose down",
-    "check": "run-p check:*",
+    "check": "run-p -ln check:*",
     "check:format": "pnpm _prettier -c .",
     "check:types": "pnpm _tsc",
     "check:styles": "pnpm _stylelint \"**/*.{css,scss,vue}\"",
     "check:scripts": "pnpm _eslint .",
-    "fix": "run-p fix:*",
+    "fix": "run-p -ln fix:*",
     "fix:format": "pnpm _prettier -w .",
     "fix:styles": "pnpm check:styles --fix",
     "fix:scripts": "pnpm check:scripts --fix",
     "deps:check": "ncu -e 1",
-    "deps:upgrade": "ncu -du --doctorInstall \"pnpm i\" --doctorTest \"pnpm deps:upgrade:doctor\"",
-    "deps:upgrade:doctor": "run-p check:types check:styles check:scripts build",
+    "deps:update": "ncu -du --doctorInstall \"pnpm i\" --doctorTest \"pnpm deps:update:doctor\"",
+    "deps:update:doctor": "run-p check:types check:styles check:scripts build",
     "clean": "shx rm -rf dist",
     "build": "pnpm clean && run-p build:*",
     "build:client": "pnpm rspack build -c rspack/config.single.ts",
@@ -64,22 +60,22 @@
     "@nitedani/shrink-ray-current": "4.3.0",
     "@unhead/vue": "2.1.2",
     "animate.css": "4.1.1",
-    "axios": "1.13.2",
+    "axios": "1.13.3",
     "cookie-parser": "1.4.7",
     "decache": "4.6.2",
     "deep-object-diff": "1.1.9",
     "express": "5.2.1",
     "helmet": "8.1.0",
     "js-cookie": "3.0.5",
-    "lodash": "4.17.21",
+    "lodash": "4.17.23",
     "lru-cache": "11.2.4",
     "nunjucks": "3.2.4",
     "path-to-regexp": "8.3.0",
     "pinia": "3.0.4",
-    "pino": "10.2.1",
+    "pino": "10.3.0",
     "pino-http": "11.0.0",
     "pino-pretty": "13.1.3",
-    "purgecss": "7.0.2",
+    "purgecss": "8.0.0",
     "redis": "5.10.0",
     "safe-stable-stringify": "2.5.0",
     "serve-favicon": "2.5.1",
@@ -94,11 +90,11 @@
     "@commitlint/config-conventional": "20.3.1",
     "@eslint/config-inspector": "1.4.2",
     "@eslint/js": "9.39.2",
-    "@rspack/cli": "1.7.2",
-    "@rspack/core": "1.7.2",
+    "@rspack/cli": "1.7.3",
+    "@rspack/core": "1.7.3",
     "@swc-node/register": "1.11.1",
     "@swc/cli": "0.7.10",
-    "@swc/core": "1.15.8",
+    "@swc/core": "1.15.10",
     "@swc/helpers": "0.5.18",
     "@tailwindcss/postcss": "4.1.18",
     "@types/bootstrap": "5.2.10",
@@ -107,12 +103,13 @@
     "@types/express-pino-logger": "4.0.6",
     "@types/js-cookie": "3.0.6",
     "@types/lodash": "4.17.23",
-    "@types/node": "25.0.9",
+    "@types/node": "25.0.10",
     "@types/nunjucks": "3.2.6",
     "@types/serve-favicon": "2.5.7",
     "@types/ua-parser-js": "0.7.39",
-    "@typescript-eslint/parser": "8.53.0",
-    "@vue/language-server": "3.2.2",
+    "@types/webpack-env": "1.18.8",
+    "@typescript-eslint/parser": "8.53.1",
+    "@vue/language-server": "3.2.3",
     "autoprefixer": "10.4.23",
     "bundle-stats-webpack-plugin": "4.21.8",
     "chokidar": "5.0.0",
@@ -123,12 +120,12 @@
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import-x": "4.16.1",
-    "eslint-plugin-perfectionist": "5.3.1",
+    "eslint-plugin-perfectionist": "5.4.0",
     "eslint-plugin-prettier": "5.5.5",
     "eslint-plugin-unicorn": "62.0.0",
     "eslint-plugin-vue": "10.7.0",
     "file-loader": "6.2.0",
-    "globals": "17.0.0",
+    "globals": "17.1.0",
     "husky": "9.1.7",
     "ignore-loader": "0.1.2",
     "lint-staged": "16.2.7",
@@ -138,12 +135,12 @@
     "postcss": "8.5.6",
     "postcss-html": "1.8.1",
     "postcss-loader": "8.2.0",
-    "prettier": "3.8.0",
+    "prettier": "3.8.1",
     "prettier-plugin-jinja-template": "2.1.0",
     "rspack-manifest-plugin": "5.2.1",
     "serve": "14.2.5",
     "shx": "0.4.0",
-    "sort-package-json": "3.6.0",
+    "sort-package-json": "3.6.1",
     "stylelint": "17.0.0",
     "stylelint-config-html": "1.1.0",
     "stylelint-config-prettier-scss": "1.0.0",
@@ -152,12 +149,12 @@
     "tailwindcss": "4.1.18",
     "ts-node": "10.9.2",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.53.0",
+    "typescript-eslint": "8.53.1",
     "url-loader": "4.1.1",
     "vue-eslint-parser": "10.2.0",
     "vue-loader": "17.4.2",
     "vue-style-loader": "4.1.3",
-    "vue-tsc": "3.2.2",
+    "vue-tsc": "3.2.3",
     "wait-on": "9.0.3"
   },
   "packageManager": "pnpm@10.28.1"
